[FIX] overflow desktop

--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -15,5 +15,6 @@
     .slider {
         padding-left: 0;
         justify-content: center;
+        overflow: visible;
     }
 }
